# skytrade-test

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/: skytrade-test.json
src/client/: constants.ts  createCollection.ts  createNonceAccount.ts  createTree.ts  init.ts  mintCnft.ts  runMintTransactions.ts  schema.ts  utils.ts
src/client/collections/: testcol.json
src/rust/: Cargo.toml
src/rust/src/: entrypoint.rs  error.rs  lib.rs
src/rust/src/instructions/: create_collection.rs  mint.rs  mod.rs
src/rust/src/states/: config.rs
