[package]
name = "firstproject"
version = "0.0.1"
description = ""
authors = [""]
license = "GPL-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "~1.16.5"

spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
mpl-bubblegum = "1.1.0"

thiserror = "1.0"
md5 = "0.7.0"
mpl-token-metadata = "3.2.1"
arrayref = "0.3.7"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/entrypoint.rs"
